Testing child_process, starting wrappers

--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
   },
   "homepage": "https://github.com/marcuscastelo/podcast-clipper#readme",
   "devDependencies": {
+    "@types/ffmpeg": "^1.0.4",
     "@types/node": "^15.6.1",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "chalk": "^4.1.1",
+    "ffmpeg": "^0.0.4"
   }
 }
