--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.1",
-    "ffmpeg": "^0.0.4"
+    "ffmpeg": "^0.0.4",
+    "utility-types": "^3.10.0"
   }
 }
