--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/ffmpeg": "^1.0.4",
     "@types/node": "^15.6.1",
+    "@types/spotify-web-api-node": "^5.0.7",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
@@ -32,7 +33,9 @@
   },
   "dependencies": {
     "chalk": "^4.1.1",
+    "dotenv": "^16.0.1",
     "ffmpeg": "^0.0.4",
+    "spotify-web-api-node": "^5.0.2",
     "utility-types": "^3.10.0"
   }
 }
