--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "chalk": "^4.1.1",
+    "commander": "^9.3.0",
     "dotenv": "^16.0.1",
     "ffmpeg": "^0.0.4",
     "spotify-web-api-node": "^5.0.2",
